--- a/locale/nl_NL/foreman_kubevirt.po
+++ b/locale/nl_NL/foreman_kubevirt.po
@@ -1,21 +1,28 @@
-# Dutch translations for foreman_kubevirt package.
-# Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the foreman_kubevirt package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Translators:
+# Maxim Burgerhout <maxim@wzzrd.com>, 2020
+# dschutterop <daniel@schutterop.nl>, 2020
+# EmielK <emiel@kremers.us>, 2020
+# Mark Olie <mark.transifex@oliekoets.nl>, 2020
+#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 1.0.0\n"
+"Project-Id-Version: foreman_kubevirt 0.1.7\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2020-05-26 13:16+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Dutch\n"
-"Language: nl_NL\n"
+"PO-Revision-Date: 2020-05-26 07:39+0000\n"
+"Last-Translator: Mark Olie <mark.transifex@oliekoets.nl>, 2020\n"
+"Language-Team: Dutch (Netherlands) (https://www.transifex.com/foreman/teams/11"
+"4/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"\n"
+"Language: nl_NL\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr ""
@@ -27,10 +34,10 @@ msgid "API port for KubeVirt only"
 msgstr ""
 
 msgid "Actions"
-msgstr ""
+msgstr "Acties"
 
 msgid "Bootable"
-msgstr ""
+msgstr "Opstartbaar"
 
 msgid "CA crt for KubeVirt only"
 msgstr ""
@@ -39,10 +46,10 @@ msgid "CNI Provider"
 msgstr ""
 
 msgid "CPUs"
-msgstr ""
+msgstr "CPUs"
 
 msgid "Disk"
-msgstr ""
+msgstr "Disk"
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr ""
@@ -66,7 +73,7 @@ msgid "NIC"
 msgstr ""
 
 msgid "Name"
-msgstr ""
+msgstr "Naam"
 
 msgid "Namespace"
 msgstr ""
