--- a/locale/pt_BR/foreman_kubevirt.po
+++ b/locale/pt_BR/foreman_kubevirt.po
@@ -1,21 +1,29 @@
-# Portuguese translations for foreman_kubevirt package.
-# Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the foreman_kubevirt package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Translators:
+# Flamarion Jorge <jorge.flamarion@gmail.com>, 2020
+# 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
+# Bryan Kearney <bryan.kearney@gmail.com>, 2020
+# Luiz Henrique Vasconcelos <luizvasconceloss@yahoo.com.br>, 2020
+# Bruno Emanuel Silva <bemanuel.pe@gmail.com>, 2020
+#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 1.0.0\n"
+"Project-Id-Version: foreman_kubevirt 0.1.7\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2020-05-26 13:16+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Portuguese\n"
-"Language: pt_BR\n"
+"PO-Revision-Date: 2020-05-26 07:39+0000\n"
+"Last-Translator: Bruno Emanuel Silva <bemanuel.pe@gmail.com>, 2020\n"
+"Language-Team: Portuguese (Brazil) (https://www.transifex.com/foreman/teams/11"
+"4/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr ""
@@ -27,10 +35,10 @@ msgid "API port for KubeVirt only"
 msgstr ""
 
 msgid "Actions"
-msgstr ""
+msgstr "Ações"
 
 msgid "Bootable"
-msgstr ""
+msgstr "Inicializável"
 
 msgid "CA crt for KubeVirt only"
 msgstr ""
@@ -39,34 +47,34 @@ msgid "CNI Provider"
 msgstr ""
 
 msgid "CPUs"
-msgstr ""
+msgstr "CPUs"
 
 msgid "Disk"
-msgstr ""
+msgstr "Disco"
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
-msgstr ""
+msgstr "Esta imagem suporta a entrada de dados do usuário (ex.: via cloud-init)?"
 
 msgid "Host name for KubeVirt only"
 msgstr ""
 
 msgid "Hostname"
-msgstr ""
+msgstr "Nome do host"
 
 msgid "Image"
-msgstr ""
+msgstr "Imagem"
 
 msgid "It is not possible to set a bootable volume and image based provisioning."
 msgstr ""
 
 msgid "Memory"
-msgstr ""
+msgstr "Memória"
 
 msgid "NIC"
-msgstr ""
+msgstr "NIC"
 
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 msgid "Namespace"
 msgstr ""
@@ -75,40 +83,40 @@ msgid "Namespace for KubeVirt only"
 msgstr ""
 
 msgid "Network"
-msgstr ""
+msgstr "Rede"
 
 msgid "Only one volume can be bootable"
-msgstr ""
+msgstr "Somente um volume pode ser inicializável"
 
 msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
 msgstr ""
 
 msgid "Password to authenticate with - used for SSH finish step."
-msgstr ""
+msgstr "Senha para autenticar-se - usada para o passo final do SSH."
 
 msgid "Please select an image"
-msgstr ""
+msgstr "Por favor selecione uma imagem"
 
 msgid "Power"
-msgstr ""
+msgstr "Energia"
 
 msgid "Power ON this machine"
-msgstr ""
+msgstr "Ligar essa máquina"
 
 msgid "Properties"
-msgstr ""
+msgstr "Propriedades"
 
 msgid "Provision and manage Kubevirt Virtual Machines from Foreman."
 msgstr ""
 
 msgid "Running on"
-msgstr ""
+msgstr "Executando em"
 
 msgid "Size (GB)"
-msgstr ""
+msgstr "Tamanho (GB)"
 
 msgid "Start"
-msgstr ""
+msgstr "Início"
 
 msgid "Storage Class"
 msgstr ""
@@ -125,22 +133,22 @@ msgid ""
 msgstr ""
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
-msgstr ""
+msgstr "O usuário utilizado para realizar o ssh na instância, normalmente cloud-user, ec2-user, ubuntu, root etc"
 
 msgid "Token"
-msgstr ""
+msgstr "Token"
 
 msgid "Token for KubeVirt only"
 msgstr ""
 
 msgid "Type"
-msgstr ""
+msgstr "Tipo"
 
 msgid "UUID"
-msgstr ""
+msgstr "UUID"
 
 msgid "VCPU(s)"
-msgstr ""
+msgstr "VCPU(s)"
 
 msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
@@ -149,7 +157,7 @@ msgid "VM should be created based on an image"
 msgstr ""
 
 msgid "X509 Certification Authorities"
-msgstr ""
+msgstr "Autoridades de Certificação X509"
 
 msgid "cni_provider or network are missing"
 msgstr ""
