--- a/locale/sv_SE/foreman_kubevirt.po
+++ b/locale/sv_SE/foreman_kubevirt.po
@@ -1,21 +1,27 @@
-# Swedish translations for foreman_kubevirt package.
-# Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the foreman_kubevirt package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Translators:
+# Fredrik Wendt <fredrik@wendt.se>, 2020
+# Mikael Fridh <frimik@gmail.com>, 2020
+# johnny.westerlund <johnny.westerlund@gmail.com>, 2020
+#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 1.0.0\n"
+"Project-Id-Version: foreman_kubevirt 0.1.7\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2020-05-26 13:16+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Swedish\n"
-"Language: sv_SE\n"
+"PO-Revision-Date: 2020-05-26 07:39+0000\n"
+"Last-Translator: johnny.westerlund <johnny.westerlund@gmail.com>, 2020\n"
+"Language-Team: Swedish (Sweden) (https://www.transifex.com/foreman/teams/114/s"
+"v_SE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"\n"
+"Language: sv_SE\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr ""
@@ -27,10 +33,10 @@ msgid "API port for KubeVirt only"
 msgstr ""
 
 msgid "Actions"
-msgstr ""
+msgstr "Åtgärder"
 
 msgid "Bootable"
-msgstr ""
+msgstr "Startbar"
 
 msgid "CA crt for KubeVirt only"
 msgstr ""
@@ -39,13 +45,13 @@ msgid "CNI Provider"
 msgstr ""
 
 msgid "CPUs"
-msgstr ""
+msgstr "CPUer"
 
 msgid "Disk"
-msgstr ""
+msgstr "Hårddisk"
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
-msgstr ""
+msgstr "Stödjer denna bild användardata (såsom via cloud-init)?"
 
 msgid "Host name for KubeVirt only"
 msgstr ""
@@ -54,19 +60,19 @@ msgid "Hostname"
 msgstr ""
 
 msgid "Image"
-msgstr ""
+msgstr "Avbildning"
 
 msgid "It is not possible to set a bootable volume and image based provisioning."
 msgstr ""
 
 msgid "Memory"
-msgstr ""
+msgstr "Minne"
 
 msgid "NIC"
-msgstr ""
+msgstr "NIC"
 
 msgid "Name"
-msgstr ""
+msgstr "Namn"
 
 msgid "Namespace"
 msgstr ""
@@ -75,10 +81,10 @@ msgid "Namespace for KubeVirt only"
 msgstr ""
 
 msgid "Network"
-msgstr ""
+msgstr "Nätverk"
 
 msgid "Only one volume can be bootable"
-msgstr ""
+msgstr "Bara en volym kan vara startbar"
 
 msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
 msgstr ""
@@ -87,28 +93,28 @@ msgid "Password to authenticate with - used for SSH finish step."
 msgstr ""
 
 msgid "Please select an image"
-msgstr ""
+msgstr "Vänligen välj en avbildning"
 
 msgid "Power"
-msgstr ""
+msgstr "Kraft"
 
 msgid "Power ON this machine"
-msgstr ""
+msgstr "Starta denna maskin"
 
 msgid "Properties"
-msgstr ""
+msgstr "Egenskaper"
 
 msgid "Provision and manage Kubevirt Virtual Machines from Foreman."
 msgstr ""
 
 msgid "Running on"
-msgstr ""
+msgstr "Körs på"
 
 msgid "Size (GB)"
-msgstr ""
+msgstr "Storlek (GB)"
 
 msgid "Start"
-msgstr ""
+msgstr "Start"
 
 msgid "Storage Class"
 msgstr ""
@@ -125,22 +131,22 @@ msgid ""
 msgstr ""
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
-msgstr ""
+msgstr "Användaren som används för att ssha till instansen, normalt cloud-user, ec2-user, ubuntu, root etc"
 
 msgid "Token"
-msgstr ""
+msgstr "Token"
 
 msgid "Token for KubeVirt only"
 msgstr ""
 
 msgid "Type"
-msgstr ""
+msgstr "Typ"
 
 msgid "UUID"
-msgstr ""
+msgstr "UUID"
 
 msgid "VCPU(s)"
-msgstr ""
+msgstr "VCPU(er)"
 
 msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
